out
ltl.y:15:1: error: unknown type name ‘ident_t’
 ident_t sym[SYMBOL_TABLE_SIZE];
 ^
ltl.y: In function ‘yyparse’:
ltl.y:51:187: error: incompatible types when assigning to type ‘int’ from type ‘struct ident_t’
  | IDENTIFIER '=' BOOL ';' { printf("set %s to %s\n", $1.sval, $3 == 0 ? "false" : "true"); $1.tval = $3; sym[ sym_index++ ] = $1;}
                                                                                                                                                                                           ^
ltl.y:57:68: error: request for member ‘tval’ in something not a structure or union
  | IDENTIFIER {$$ = sym[ sym_lookup($1.sval) ].tval;}
                                                                    ^
In file included from /usr/include/string.h:635:0,
                 from ltl.y:3:
ltl.y: In function ‘sym_lookup’:
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.y:84:20: error: request for member ‘sval’ in something not a structure or union
   if( strcmp(sym[i].sval, str) == 0 )
                    ^
ltl.l: In function ‘yylex’:
ltl.l:17:62: error: ‘YYSTYPE’ has no member named ‘sval’
 "->"|"=>"       { /*printf("lex found operator   '%s'\n", yytext);*/;  yylval.sval = strdup(yytext); return IMPLIES;}
                                                              ^
ltl.l:19:62: error: ‘YYSTYPE’ has no member named ‘sval’
 "|"|"||"       { /*printf("lex found operator   '%s'\n", yytext);*/;  yylval.sval = strdup(yytext); return OR;} 
                                                              ^
ltl.l:20:62: error: ‘YYSTYPE’ has no member named ‘sval’
 "&"|"&&"       { /*printf("lex found operator   '%s'\n", yytext);*/;  yylval.sval = strdup(yytext); return AND;}
                                                              ^
ltl.l:27:62: error: ‘YYSTYPE’ has no member named ‘sval’
 "!"        { /*printf("lex found operator   '%s'\n", yytext);*/;  yylval.sval = strdup(yytext); return NOT;}
                                                              ^
make: *** [all] Error 1
